# helioscada-backend

./: .env.example  .gitignore  Dockerfile  GEMINI.md  LICENSE  README.md  docker-compose.yml  issue.md  plan.md  pyproject.toml
.agents/skills/code-review-checklist/: SKILLS.md
.agents/skills/fastapi-pro/: SKILLS.md
.agents/skills/fastapi-router-py/: SKILLS.md
.agents/skills/fastapi-template/: SKILLS.md
.agents/skills/fastapi-template/resources/: implementation-playbook.md
.agents/skills/git-convention/evals/: evals.json
.agents/skills/git-convention/references/: CLEAN_HISTORY.md  implementation.md
.agents/skills/python-testing-patterns/: SKILLS.md
.agents/skills/python-testing-patterns/resources/: implementation-playbook.md
docs/: code_review.md  system_spec.md  tmp.md
docs/v1.0/: prd.md
scripts/: start_dummy_publisher.sh  test.sh
src/backend/app/: main.py
src/backend/app/api/: deps.py
src/backend/app/api/routers/: control.py  health.py  telemetry.py
src/backend/app/core/: config.py
src/backend/app/db/: init_db.py  session.py
src/backend/app/models/: control.py  telemetry.py
src/backend/app/schemas/: control.py  health.py  telemetry.py
src/backend/app/services/: control.py  telemetry.py
src/backend/bridge/: main.py
tests/: conftest.py  dummy_publisher.py  test_api_control.py  test_api_health.py  test_api_telemetry_export.py  test_api_telemetry_get.py  test_api_telemetry_post.py
